# swagger.json
@@ -26,7 +26,11 @@
    },{
       "name":"Ingredients",
       "description":"So Yummy's Ingredients"   
-      }],
+      },
+   {
+      "name":"Favorite",
+      "description":"So Yummy's Favorite"
+   }],
    "paths":{
       "auth/register":{
          "post":{
@@ -953,7 +957,152 @@
                   "content":{
                      "application/json":{
                       "schema":{
-                        "$ref":"#/components/schemas/Ingredients.ingredientIdResponse"
+                        "$ref":"#/components/schemas/Ingredients.ingredientResponse"
+                     }
+                     }
+                  }
+               },
+               "401":{
+                  "description":"Error",
+                  "content":{
+                     "application/json":{
+                       "type":"string",
+                       "example":"Not authenticated"
+                     }
+                  }
+               },"404":{
+                  "description":"Error",
+                  "content":{
+                     "application/json":{
+                       "type":"string",
+                       "example":"Not found"
+                     }
+                  }
+               },
+               "500":{
+                  "description":"Error",
+                  "content":{
+                     "application/json":{
+                       "type":"string",
+                       "example":"The server encountered an unexpected value that prevented it from setting up a request"
+                     }
+                  }
+               }
+            }
+         }
+      },
+      "ingredients/byId":{
+         "get":{
+            "tags":["Ingredients"],
+            "summery":" Ingredients",
+            "parameters":[{
+               "in":"path",
+               "name":"ingredientId",
+               "required":true
+            }],
+            "security":[{"Bearer":[]}],
+            "responses":{
+               "200":{
+                  "description":"OK",
+                  "content":{
+                     "application/json":{
+                      "schema":{
+                        "$ref":"#/components/schemas/Ingredients.ByIdResponse"
+                     }
+                     }
+                  }
+               },
+               "401":{
+                  "description":"Error",
+                  "content":{
+                     "application/json":{
+                       "type":"string",
+                       "example":"Not authenticated"
+                     }
+                  }
+               },"404":{
+                  "description":"Error",
+                  "content":{
+                     "application/json":{
+                       "type":"string",
+                       "example":"Not found"
+                     }
+                  }
+               },
+               "500":{
+                  "description":"Error",
+                  "content":{
+                     "application/json":{
+                       "type":"string",
+                       "example":"The server encountered an unexpected value that prevented it from setting up a request"
+                     }
+                  }
+               }
+            }
+         }
+      },
+      "ingredients/byName":{
+         "get":{
+            "tags":["Ingredients"],
+            "summery":" Ingredients",
+            "parameters":[{
+               "in":"path",
+               "name":"ingredientName",
+               "required":true
+            }],
+            "security":[{"Bearer":[]}],
+            "responses":{
+               "200":{
+                  "description":"OK",
+                  "content":{
+                     "application/json":{
+                      "schema":{
+                        "$ref":"#/components/schemas/Ingredients.ByNameResponse"
+                     }
+                     }
+                  }
+               },
+               "401":{
+                  "description":"Error",
+                  "content":{
+                     "application/json":{
+                       "type":"string",
+                       "example":"Not authenticated"
+                     }
+                  }
+               },"404":{
+                  "description":"Error",
+                  "content":{
+                     "application/json":{
+                       "type":"string",
+                       "example":"Not found"
+                     }
+                  }
+               },
+               "500":{
+                  "description":"Error",
+                  "content":{
+                     "application/json":{
+                       "type":"string",
+                       "example":"The server encountered an unexpected value that prevented it from setting up a request"
+                     }
+                  }
+               }
+            }
+         }
+      },
+      "favorite":{
+         "get":{
+            "tags":["Favorite"],
+            "summery":"Favorite",
+            "security":[{"Bearer":[]}],
+            "responses":{
+               "200":{
+                  "description":"OK",
+                  "content":{
+                     "application/json":{
+                      "schema":{
+                        "$ref":"#/components/schemas/Favorite.Response"
                      }
                      }
                   }
@@ -1322,8 +1471,112 @@
         }
       ]
     },
-    "Ingredients.ingredientIdResponse":{
-      
+    "Ingredients.ingredientResponse":{
+      "type":"array",
+      "items":{
+         "example":{
+             "_id": "640cd5ac2d9fecf12e88981d",
+        "title": "Beef Sunday Roast",
+        "category": "Beef",
+        "area": "British",
+        "instructions": "Cook the Broccoli and Carrots in a pan of boiling water until tender.\r\n\r\nRoast the Beef and Potatoes in the oven for 45mins, the potatoes may need to be checked regularly to not overcook.\r\n\r\nTo make the Yorkshire puddings:\r\nHeat oven to 230C/fan 210C/gas 8. Drizzle a little sunflower oil evenly into 2 x 4-hole Yorkshire pudding tins or a 12-hole non-stick muffin tin and place in the oven to heat through\r\nTo make the batter, tip 140g plain flour into a bowl and beat in four eggs until smooth. Gradually add 200ml milk and carry on beating until the mix is completely lump-free. Season with salt and pepper. Pour the batter into a jug, then remove the hot tins from the oven. Carefully and evenly pour the batter into the holes. Place the tins back in the oven and leave undisturbed for 20-25 mins until the puddings have puffed up and browned. Serve immediately.\r\n\r\nPlate up and add the Gravy as desired.",
+        "description": "Roast beef with vegetables and gravy",
+        "thumb": "https://www.themealdb.com/images/media/meals/ssrrrs1503664277.jpg",
+        "preview": "https://res.cloudinary.com/ddbvbv5sp/image/upload/v1678560538/du6my40xbfdxsxdzumhy.jpg",
+        "time": "45",
+        "popularity": 3,
+        "favorites": [
+            "640f760b24894df9da7b4f82",
+            "64124dc022ca74f19bf4e02d",
+            "64135631f9ab2e3d387201b9",
+            "6412db811688c90e5427c534",
+            "6412d0ed1688c90e5427b75f",
+            "641970802264c318da9ac920",
+            "6418a7c4e05e5b3d5b47af0e",
+            "6418a645e05e5b3d5b47ae8d",
+            "641ab80cdf4a1f25b1611694"
+        ],
+        "likes": [
+            "640f760b24894df9da7b4f82",
+            "64135631f9ab2e3d387201b9",
+            "641807a63c1d9f12cba908c8"
+        ],
+        "youtube": "https://www.youtube.com/watch?v=2l3-dBdNehY",
+        "tags": [
+            "MainMeal"
+        ],
+        "createdAt": "2023-03-11T19:25:33.241Z",
+        "updatedAt": "2023-03-23T10:28:37.354Z",
+        "ingredients": [
+            {
+                "id": "640c2dd963a319ea671e365d",
+                "measure": "8 slices"
+            },
+            {
+                "id": "640c2dd963a319ea671e367a",
+                "measure": "12 florets"
+            },
+            {
+                "id": "640c2dd963a319ea671e3746",
+                "measure": "1 Packet"
+            },
+            {
+                "id": "640c2dd963a319ea671e3684",
+                "measure": "1 Packet"
+            },
+            {
+                "id": "640c2dd963a319ea671e3743",
+                "measure": "140g"
+            },
+            {
+                "id": "640c2dd963a319ea671e36ca",
+                "measure": "4"
+            },
+            {
+                "id": "640c2dd963a319ea671e371f",
+                "measure": "200ml"
+            },
+            {
+                "id": "640c2dd963a319ea671e3776",
+                "measure": "drizzle (for cooking)"
+            }
+        ]
+         }
+      }
+    },
+    "Ingredients.ByIdResponse":{
+      "type":"array",
+      "items":{
+         "example":{
+             "tnb": "",
+        "_id": "640c2dd963a319ea671e365b",
+        "ttl": "Chicken",
+        "desc": "The chicken is a type of domesticated fowl, a subspecies of the red junglefowl (Gallus gallus). It is one of the most common and widespread domestic animals, with a total population of more than 19 billion as of 2011. There are more chickens in the world than any other bird or domesticated fowl. Humans keep chickens primarily as a source of food (consuming both their meat and eggs) and, less commonly, as pets. Originally raised for cockfighting or for special ceremonies, chickens were not kept for food until the Hellenistic period (4th–2nd centuries BC).\r\n\r\nGenetic studies have pointed to multiple maternal origins in South Asia, Southeast Asia, and East Asia, but with the clade found in the Americas, Europe, the Middle East and Africa originating in the Indian subcontinent. From ancient India, the domesticated chicken spread to Lydia in western Asia Minor, and to Greece by the 5th century BC. Fowl had been known in Egypt since the mid-15th century BC, with the \"bird that gives birth every day\" having come to Egypt from the land between Syria and Shinar, Babylonia, according to the annals of Thutmose III.",
+        "t": "",
+        "thb": "https://res.cloudinary.com/ddbvbv5sp/image/upload/v1678564123/rw8pn3541bmukb8d3mio.png"
+         }
+      }
+    },
+    "Ingredients.ByNameResponse":{
+      "type":"array",
+      "items":{
+         "example":{
+            "tnb": "",
+        "_id": "640c2dd963a319ea671e365d",
+        "ttl": "Beef",
+        "desc": "Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of high-quality protein and nutrients.\r\n\r\nMost beef skeletal muscle meat can be used as is by merely cutting into certain parts, such as roasts, short ribs or steak (filet mignon, sirloin steak, rump steak, rib steak, rib eye steak, hanger steak, etc.), while other cuts are processed (corned beef or beef jerky). Trimmings, on the other hand, are usually mixed with meat from older, leaner (therefore tougher) cattle, are ground, minced or used in sausages. The blood is used in some varieties called blood sausage. Other parts that are eaten include other muscles and offal, such as the oxtail, liver, tongue, tripe from the reticulum or rumen, glands (particularly the pancreas and thymus, referred to as sweetbread), the heart, the brain (although forbidden where there is a danger of bovine spongiform encephalopathy, BSE, commonly referred to as mad cow disease), the kidneys, and the tender testicles of the bull (known in the United States as calf fries, prairie oysters, or Rocky Mountain oysters). Some intestines are cooked and eaten as is, but are more often cleaned and used as natural sausage casings. The bones are used for making beef stock.",
+        "t": "",
+        "thb": "https://res.cloudinary.com/ddbvbv5sp/image/upload/v1678564124/zzxbvvvye3pnooygfdgg.png"
+         }
+      }
+    },
+    "Favorite.Response":{
+      "type":"array",
+      "items":{
+         "example":{
+            
+         }
+      }
     }
    },
  "securitySchemes":{
